--- a/smartsheet.html
+++ b/smartsheet.html
@@ -239,6 +239,105 @@
             </div>
         </section>
 
+        <!-- Microsoft Integration Section -->
+        <section class="section">
+            <div class="section-header">
+                <span class="section-badge">🔗 Microsoft Office Integration</span>
+                <h2 class="section-title">Best for Microsoft Analytics & Enterprise</h2>
+                <p class="section-subtitle">
+                    Only platform with native Power BI connector - unique competitive advantage
+                </p>
+            </div>
+
+            <div class="cards">
+                <div class="card">
+                    <div class="card-icon">📊</div>
+                    <h3>Power BI Integration ⭐</h3>
+                    <p><strong>UNIQUE ADVANTAGE!</strong> Only platform with native Power BI connector. Template app with pre-built dashboards. Bi-directional data flow. Embed Power BI reports in Smartsheet.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">📧</div>
+                    <h3>Outlook Integration</h3>
+                    <p>Create or edit Smartsheet rows directly from Outlook. Convert emails to items instantly. Full mobile support (iOS/Android). Keep entire email threads as discussions.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">👥</div>
+                    <h3>Microsoft Teams</h3>
+                    <p>Embed sheets, dashboards, and reports as Teams tabs. Real-time collaboration within Teams. Approval workflows without leaving Teams. Automated channel notifications.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">☁️</div>
+                    <h3>OneDrive Integration</h3>
+                    <p>Attach OneDrive files directly to Smartsheet rows. Search and preview within Smartsheet. Upload and work on files. Maintain single source of truth.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">🔐</div>
+                    <h3>Azure AD (Entra ID)</h3>
+                    <p>Enterprise SSO and user provisioning. Mobile app sign-in with Azure AD. Centralized user management. Enterprise-grade authentication.</p>
+                </div>
+
+                <div class="card">
+                    <div class="card-icon">⚡</div>
+                    <h3>Power Automate</h3>
+                    <p>Low-code automation workflows. Connect Smartsheet with entire Microsoft ecosystem. Eliminate manual data entry. Reduce human error.</p>
+                </div>
+            </div>
+
+            <div class="comparison-quick" style="margin-top: 2rem;">
+                <div class="comparison-table-modern">
+                    <div class="comparison-row header-row">
+                        <div class="comparison-cell">Integration Feature</div>
+                        <div class="comparison-cell">Details</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📊 <strong>Power BI Connector</strong></div>
+                        <div class="comparison-cell">Native ⭐ UNIQUE - Only platform with this!</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📧 <strong>Outlook Integration</strong></div>
+                        <div class="comparison-cell">Full mobile support (iOS/Android)</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">👥 <strong>Teams Integration</strong></div>
+                        <div class="comparison-cell">Embedded tabs + real-time editing</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">☁️ <strong>OneDrive</strong></div>
+                        <div class="comparison-cell">Native built-in integration</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">🔐 <strong>Azure AD SSO</strong></div>
+                        <div class="comparison-cell">Enterprise SSO + mobile support</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">⚡ <strong>Power Automate</strong></div>
+                        <div class="comparison-cell">Full workflow automation</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">💰 <strong>Cost</strong></div>
+                        <div class="comparison-cell">Included in Pro, Business, Enterprise</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">⏱️ <strong>Setup Time</strong></div>
+                        <div class="comparison-cell">15-20 minutes (Easy)</div>
+                    </div>
+                    <div class="comparison-row">
+                        <div class="comparison-cell">📋 <strong>Requirements</strong></div>
+                        <div class="comparison-cell">Office 365 Commercial or Outlook.com</div>
+                    </div>
+                </div>
+            </div>
+
+            <div style="margin-top: 2rem; padding: 1.5rem; background: linear-gradient(135deg, rgba(0, 115, 230, 0.1) 0%, rgba(0, 115, 230, 0.05) 100%); border-radius: 12px; border-left: 4px solid #0073e6;">
+                <h3 style="margin-top: 0; color: #0073e6;">🏆 Best for Analytics & Enterprise</h3>
+                <p style="margin-bottom: 0;"><strong>Why Smartsheet leads in analytics:</strong> ONLY platform with native Power BI connector - a unique competitive advantage for data-driven organizations. Bi-directional Power BI integration with template app. Deep enterprise Microsoft integration with robust Teams embedding, Azure AD SSO, and full mobile Outlook support. Best for finance, operations, and analytics teams heavily using Power BI.</p>
+            </div>
+        </section>
+
         <!-- Pros & Cons Section -->
         <section class="section">
             <div class="section-header">
