--- a/comparison.html
+++ b/comparison.html
@@ -379,6 +379,179 @@
             </section>
 
             <section>
+                <h2>Microsoft Office Integration Comparison</h2>
+                <p style="margin-bottom: 2rem;">All three platforms offer robust Microsoft Office integrations. Here's how they compare:</p>
+                
+                <div class="comparison-table-wrapper">
+                    <table class="comparison-table">
+                        <thead>
+                            <tr>
+                                <th>Integration Feature</th>
+                                <th class="asana-col">Asana</th>
+                                <th class="monday-col">Monday.com</th>
+                                <th class="airtable-col">Smartsheet</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td><strong>Outlook Integration</strong></td>
+                                <td>✅ Native add-in</td>
+                                <td>✅ Native add-in</td>
+                                <td>✅ Native add-in</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Email-to-Task</strong></td>
+                                <td>✅ Instant conversion</td>
+                                <td>✅ Instant conversion</td>
+                                <td>✅ Create/edit rows</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Microsoft Teams</strong></td>
+                                <td>✅ Native + AI Copilot</td>
+                                <td>✅ Updates & items</td>
+                                <td>✅ Embedded tabs</td>
+                            </tr>
+                            <tr>
+                                <td><strong>OneDrive/SharePoint</strong></td>
+                                <td>✅ Direct attachment</td>
+                                <td>✅ File syncing</td>
+                                <td>✅ Built-in native</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Calendar Sync</strong></td>
+                                <td>✅ Auto deadlines sync</td>
+                                <td>✅ Bi-directional</td>
+                                <td>✅ Event syncing</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Azure AD SSO</strong></td>
+                                <td>✅ SAML-based</td>
+                                <td>✅ Enterprise tier</td>
+                                <td>✅ Entra ID</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Power BI Integration</strong></td>
+                                <td>⚠️ Via connectors</td>
+                                <td>⚠️ Via connectors</td>
+                                <td>✅ <strong>Native ⭐ UNIQUE!</strong></td>
+                            </tr>
+                            <tr>
+                                <td><strong>Power Automate</strong></td>
+                                <td>✅ Full support</td>
+                                <td>✅ 200+ templates</td>
+                                <td>✅ Full workflows</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Mobile Outlook</strong></td>
+                                <td>✅ iOS/Android</td>
+                                <td>✅ iOS/Android</td>
+                                <td>✅ iOS/Android</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Integration Cost</strong></td>
+                                <td><strong>FREE ⭐</strong></td>
+                                <td>Included in paid</td>
+                                <td>Included in plans</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Setup Time</strong></td>
+                                <td>15-20 minutes</td>
+                                <td><strong>10-15 min ⭐</strong></td>
+                                <td>15-20 minutes</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Requirements</strong></td>
+                                <td>Office 365 Commercial</td>
+                                <td>M365 Business Premium</td>
+                                <td>Office 365/Outlook.com</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <div class="cards" style="margin-top: 2rem;">
+                    <div class="card" style="border-top: 4px solid var(--asana-primary);">
+                        <div class="card-icon">🏆</div>
+                        <h3>Asana - Best Overall Integration</h3>
+                        <p><strong>Unique Advantage:</strong> FREE on all plans (even free tier!)</p>
+                        <ul style="text-align: left; list-style: none; padding: 0; margin-top: 1rem;">
+                            <li>✅ Most comprehensive ecosystem</li>
+                            <li>✅ Native Teams with AI Copilot</li>
+                            <li>✅ Azure AD SSO (easiest setup)</li>
+                            <li>✅ FREE integration features</li>
+                            <li>✅ OneDrive + SharePoint support</li>
+                        </ul>
+                        <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--gray-600);"><strong>Best For:</strong> Organizations using multiple Microsoft tools daily, teams wanting FREE Office integration, enterprises needing Azure AD SSO</p>
+                    </div>
+
+                    <div class="card" style="border-top: 4px solid var(--monday-primary);">
+                        <div class="card-icon">⚡</div>
+                        <h3>Monday.com - Fastest Setup</h3>
+                        <p><strong>Unique Advantage:</strong> Quickest deployment (10-15 minutes)</p>
+                        <ul style="text-align: left; list-style: none; padding: 0; margin-top: 1rem;">
+                            <li>✅ Bi-directional calendar sync</li>
+                            <li>✅ Excellent Outlook integration</li>
+                            <li>✅ Office 365 connector built-in</li>
+                            <li>✅ Beautiful visual interface</li>
+                            <li>✅ Fastest time-to-value</li>
+                        </ul>
+                        <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--gray-600);"><strong>Best For:</strong> Teams primarily using Outlook, organizations needing rapid deployment, visual collaboration focus</p>
+                    </div>
+
+                    <div class="card" style="border-top: 4px solid var(--smartsheet-primary);">
+                        <div class="card-icon">📊</div>
+                        <h3>Smartsheet - Analytics Leader</h3>
+                        <p><strong>Unique Advantage:</strong> ONLY native Power BI connector! ⭐</p>
+                        <ul style="text-align: left; list-style: none; padding: 0; margin-top: 1rem;">
+                            <li>✅ Native Power BI (UNIQUE!)</li>
+                            <li>✅ Bi-directional data flow</li>
+                            <li>✅ Template app pre-built</li>
+                            <li>✅ Embedded Teams tabs</li>
+                            <li>✅ Full mobile Outlook support</li>
+                        </ul>
+                        <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--smartsheet-primary);"><strong>Best For:</strong> Organizations using Power BI extensively, data-driven teams, finance/operations departments, analytics-focused organizations</p>
+                    </div>
+                </div>
+
+                <div class="info-box" style="margin-top: 2rem;">
+                    <h3>Microsoft Integration - Key Decision Factors</h3>
+                    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 1rem; margin-top: 1rem;">
+                        <div>
+                            <p><strong>🏆 Choose Asana if:</strong></p>
+                            <ul style="margin-top: 0.5rem;">
+                                <li>Using multiple Microsoft tools</li>
+                                <li>Want FREE Office integration</li>
+                                <li>Need Azure AD SSO</li>
+                                <li>Cost-effectiveness is priority</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <p><strong>⚡ Choose Monday.com if:</strong></p>
+                            <ul style="margin-top: 0.5rem;">
+                                <li>Primarily using Outlook</li>
+                                <li>Need fastest setup</li>
+                                <li>Want visual interface</li>
+                                <li>Rapid adoption critical</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <p><strong>📊 Choose Smartsheet if:</strong></p>
+                            <ul style="margin-top: 0.5rem;">
+                                <li>Power BI is critical</li>
+                                <li>Analytics-driven organization</li>
+                                <li>Need enterprise reporting</li>
+                                <li>Data visualization key</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="success-box" style="margin-top: 2rem;">
+                    <strong>Bottom Line:</strong> All three platforms offer strong Microsoft integration. Asana leads on breadth and cost (FREE!), Monday.com wins on setup speed, and Smartsheet is unmatched for analytics with its unique native Power BI connector.
+                </div>
+            </section>
+
+            <section>
                 <h2>Strengths & Weaknesses</h2>
                 
                 <div class="cards">
@@ -529,7 +702,7 @@
 
     <footer class="footer">
         <div class="footer-content">
-            <p>© 2025 Implementation Hub Guide | Created for Customer Success Teams</p>
+            <p>© 2025 Implementation Hub Guide | Created for Client Success Teams</p>
             <p class="footer-links">
                 <a href="index.html">Home</a> • 
                 <a href="demo.html">Live Demo</a>
